--- a/less6/index26.html
+++ b/less6/index26.html
@@ -52,6 +52,8 @@
   btn2.onclick = ()=>{
     img.style.backgroundImage = "url(https://cdn.7days.ru/pic/309/949034/1530745/86.jpg)"
   }
+  //git clone 
+  // код aijanaijan0923
 
 
 
